--- a/example.tex
+++ b/example.tex
@@ -202,7 +202,7 @@
 \label{fig:first-example}
 \end{figure*}
 %
-Figure~\ref{fig:first-example} gives an example of the Hazelnut user
+\todo{add let and ifz}\todo{add let to example}\todo{finalize table}Figure~\ref{fig:first-example} gives an example of the Hazelnut user
 performing two simple programming tasks.
 The syntactic forms in this figure will be formally defined in Sec. \ref{sec:hazel}. For now, we will develop only the necessary intuitions. In the first task (Lines 1-9), the user constructs the identity function over numbers. In the second task (Lines 10-19), the user applies this function (assumed to be bound to a variable, $id$), to the number expression $\hnum{3}$.
 Each of these tasks is carried out interactively, through the sequence of \emph{actions} shown in the  column labeled \textbf{Next Action}. For reference, we cite the relevant rules from Sec. \ref{sec:hazel} in the final column.
