--- a/implementation.tex
+++ b/implementation.tex
@@ -7,6 +7,7 @@
 \label{fig:FRP}
 \end{figure}
 
+\todo{make figure take up only one column}\todo{change terminology in figure}\todo{revise}
 The key question that must be answered for any implementation strategy is: how do we model a stream of actions from a user? Let us assume that these actions are chosen (using some input device, preferably, a keyboard) from some ``palette'' that never presents the user with actions that are not semantically well-defined, according to the action semantics defined earlier.
 %In a traditional editor, the input from the user is a stream of characters, and there are no guarantees that at any point that the program is syntactically well-formed, so the designer leaves editing as an .
 %In contrast, in a structure editor, the input from the user is a stream of operations.
