--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,34 @@
+
+@inproceedings{Altadmri:2015:MCI:2676723.2677258,
+ author = {Altadmri, Amjad and Brown, Neil C.C.},
+ title = {37 Million Compilations: Investigating Novice Programming Mistakes in Large-Scale Student Data},
+ booktitle = {Proceedings of the 46th ACM Technical Symposium on Computer Science Education},
+ series = {SIGCSE '15},
+ year = {2015},
+ isbn = {978-1-4503-2966-8},
+ location = {Kansas City, Missouri, USA},
+ pages = {522--527},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2676723.2677258},
+ doi = {10.1145/2676723.2677258},
+ acmid = {2677258},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {blackbox, programming mistakes},
+} 
+
+
+@INPROCEEDINGS{6883030, 
+author={Y. S. Yoon and B. A. Myers}, 
+booktitle={2014 IEEE Symposium on Visual Languages and Human-Centric Computing (VL/HCC)}, 
+title={A longitudinal study of programmers' backtracking}, 
+year={2014}, 
+pages={101-108}, 
+keywords={backtracking;interactive programming;software tools;source code (software);IDE;abstract syntax tree node;backtracking instances;backtracking rate;backtracking tools;design implications;fine-grained code editing logs;interactive development environments;longitudinal study;programmer backtracking;programming;source code;undo command;Detectors;Educational institutions;Encoding;Face;History;Java;Programming;backtracking;empirical study;interactive development environments (IDE);undo}, 
+doi={10.1109/VLHCC.2014.6883030}, 
+ISSN={1943-6092}, 
+month={July},}
+
 @article{DBLP:journals/jacm/DaviesP01,
   author    = {Rowan Davies and
                Frank Pfenning},
