added more citations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -18,6 +18,33 @@
 } 
 
 
+@inproceedings{Mooty:2010:CCC:1915084.1916348,
+ author = {Mooty, Mathew and Faulring, Andrew and Stylos, Jeffrey and Myers, Brad A.},
+ title = {Calcite: Completing Code Completion for Constructors Using Crowds},
+ booktitle = {Proceedings of the 2010 IEEE Symposium on Visual Languages and Human-Centric Computing},
+ series = {VLHCC '10},
+ year = {2010},
+ isbn = {978-0-7695-4206-5},
+ pages = {15--22},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/VLHCC.2010.12},
+ doi = {10.1109/VLHCC.2010.12},
+ acmid = {1916348},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {Eclipse, API Documentation, Natural Programming, Crowdsourcing},
+} 
+
+
+@inproceedings{sarkar2015impact,
+  title={The impact of syntax colouring on program comprehension},
+  author={Sarkar, Advait},
+  booktitle={Proceedings of the 26th Annual Conference of the Psychology of Programming Interest Group (PPIG 2015)},
+  pages={49--58},
+  year={2015}
+}
+
+
 @INPROCEEDINGS{6883030, 
 author={Y. S. Yoon and B. A. Myers}, 
 booktitle={2014 IEEE Symposium on Visual Languages and Human-Centric Computing (VL/HCC)}, 
