--- a/intro.tex
+++ b/intro.tex
@@ -68,17 +68,35 @@ Some editors have developed \emph{ad hoc} workarounds for this problem, e.g. the
 % you want because of the type. Simply put, the primitive operations
 % available in text editors do not always correspond to sensible
 % transformations on the structure of the program.
+One attempt to solve this problem has been \emph{Structure editors},
+where every edit action leaves the program being manipulated in a 
+structurally well-formed state.\footnote{In addition to eliminating malformed edit states, it is also often promised that programs can be written more quickly using a structure editor. However, we will not discuss such ``edit costs'' here, because they depend on particular implementation details, e.g. whether a keyboard or a mouse is in use.} 
+%Scratch etc. for novices. mbeddr for pros. Lamdu and Unison ongoing efforts with a functional foundation. We give other examples of notable structure editors in Sec. \ref{sec:rw}.\todo{revise}
 
-\emph{Structure editors} are program editors where every edit action leaves the program being manipulated in a 
-structurally well-formed state.\footnote{In addition to eliminating malformed edit states, it is also often promised that programs can be written more quickly using a structure editor. However, we will not discuss such ``edit costs'' here, because they depend on particular implementation details, e.g. whether a keyboard or a mouse is in use.} Scratch etc. for novices. mbeddr for pros. Lamdu and Unison ongoing efforts with a functional foundation. We give other examples of notable structure editors in Sec. \ref{sec:rw}.\todo{revise}
-
-The problem is that it is still possible to leave the program in a semantically meaningless (i.e. undefined) state, because language definitions generally only give meaning to complete, well-typed terms. This makes it difficult for humans and tools to reason about types and binding during the development process, even when using a structure editor. Some structure editors attempt stuff, but it is not clear what invariants are being maintained (e.g. Unison ; Scratch seems not to allow literals of the wrong type, but variables are not typed.)\todo{revise} %More sophisticated semantic reasoning principles thus remain .
+However, these syntactically correct states can be semantically meaningless (i.e. undefined), because the language definitions generally only give meaning to complete, well-typed terms. (e.g., when a branching element is introduced, the program does not become semantically correct until both branches are complete)
+This makes it difficult for humans and tools to reason about types and binding during the development process, even when using a structure editor.
+Similar to text editors, structure editors also can develop workarounds to try to help users, but these efforts can only extend so far, because of the underlying language definition.
+%Some structure editors attempt stuff, but it is not clear what invariants are being maintained (e.g. Unison ; Scratch seems not to allow literals of the wrong type, but variables are not typed.)\todo{revise} %More sophisticated semantic reasoning principles thus remain .
 
 %% TODO: some sort of transition that talks about how you still don't have
 %% semantic reasoning principles because you can be left in a semantically
 %% ill-defined state
 
-\todo{revise remainder of intro}In this paper, we present our ongoing work on a minimal structure editor, Hazelnut,  defined in the type-theoretic style (i.e. Hazelnut is a \emph{structure editor calculus}.) In Hazelnut, expressions and types with \emph{holes} have a well-defined static semantics. Edit actions are type-aware and leave the program in both a structurally and semantically well-defined state. In fact, edit actions maintain an even stronger invariant -- when acting on an expression whose type is determined by its surroundings (e.g. an expression in function argument position), only edit actions consistent with that type are permitted (we will formally state this invariant in Sec. \ref{sec:actions}.) This does not imply that programs need to be constructed in a strictly outside-in manner, however, because an expression that has a type that is not yet consistent with its surroundings will automatically be put into a {hole} that defers consistency analysis until the hole is \emph{finished}.
+%\todo{revise remainder of intro}
+
+In this paper, we present a minimal structure editor, Hazelnut,  defined in the type-theoretic style (i.e. Hazelnut is a \emph{structure editor calculus}). 
+By defining \emph{holes} as a language construct, for both expressions as types, Hazelnut enables type-aware actions that always leave the program in both a structurally and semantically well-defined state. 
+%In Hazelnut, expressions and types with \emph{holes} have a well-defined static semantics. Edit actions are type-aware and leave the program in both a structurally and semantically well-defined state. 
+In fact, edit actions maintain an even stronger invariant -- when acting on an expression whose type is determined by its surroundings (e.g. an expression in function argument position), only edit actions consistent with that type are permitted (we will formally state this invariant in Sec. \ref{sec:actions}.) This does not imply that programs need to be constructed in a strictly outside-in manner, however, because an expression that has a type that is not yet consistent with its surroundings will automatically be put into a {hole} that defers consistency analysis until the hole is \emph{finished}.
+
+By keeping the program in both a structurally and semantically well-defined state at all times, Hazelnut allows users to avoid premature commitment~\cite{green1996usability}.  
+By inserting a hole, the user can leave certain parts of the program unfinished, \todo{What is the best word to define this concept?  In progress, unfinished, incomple?} and yet still in a well defined type state. 
+This also enables progressive evaluation~\cite{green1996usability}, because unfinished solutions are also are well-defined at all times, thus enabling tools to provide evaluation of unfinished solutions.
+ 
+
+
+
+\todo{Talk about dynamics.}
 
 The remainder of the paper is organized as follows:
 \begin{itemize}
